challenges/challenge1/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: frontend
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: ghcr.io/eficode-academy/quotes-flask-frontend:release
          name: frontend
          ports:
            - containerPort: 5000
          resources: 
            limits:
              cpu: 100m
              memory: 128Mi
