challenges/challenge1/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
  namespace: default
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 5000
  selector:
    system: backend
