challenges/challenge1/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: frontend
  labels:
    app: frontend
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontend
