challenges/challenge1/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: quotes.localhost
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service: 
              name: frontend
              port:
                number: 5000
